# DDL-Firewall

./: .gitignore  CMakeLists.txt  LICENSE  README.md  add_job.cpp  add_job.ui  add_reminder.cpp  add_reminder.h  add_reminder.ui  add_sche_task.cpp  add_sche_task.h  add_sche_task.ui  add_subtask.cpp  add_subtask.ui  add_tasklist.cpp  add_tasklist.ui  addtask.cpp  addtask.cpp.autosave  addtask.h  addtask.ui  addtasklist.cpp  addtasklist.h  addtasklist.ui  calendar_type.cpp  calendar_type.h  calendar_type.ui  ddlfirewallpro.pro  edit_job.cpp  edit_job.h  edit_job.ui  edit_reminder.cpp  edit_reminder.h  edit_reminder.ui  edit_sche_task.cpp  edit_sche_task.h  edit_sche_task.ui  edit_subtask.cpp  edit_subtask.h  edit_subtask.ui  errors.cpp  (+23 more)
backend/classes/: reminder.h  subtask.cpp  subtask.h  task.cpp  task.h  tasklist.h  uuid.hpp
backend/config/: config_template.hpp
backend/data/: data.cpp  data.h  json_io.h
backend/self_test/: data_gen.h  jsonio_test.hpp
frontend/: add_job.cpp  add_job.h  add_job.ui  add_reminder.cpp  add_sche_task.cpp  add_sche_task.h  add_subtask.cpp  add_subtask.h  add_subtask.ui  add_tasklist.cpp  add_tasklist.ui  calendar_type.h  calendar_type.ui  ddlfirewall.qrc  edit_job.cpp  edit_job.h  edit_reminder.cpp  edit_reminder.h  edit_reminder.ui  edit_sche_task.cpp  edit_sche_task.h  edit_subtask.cpp  edit_subtask.h  errors.cpp  errors.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/classes/: reminder.cpp  reminder.h  subtask.cpp  subtask.h  task.cpp  task.h  tasklist.cpp  tasklist.h
src/config/: config.cpp  config.h
src/data/: data.cpp  data.h  json_io.cpp  json_io.hpp
src/fileio/: textfile.cpp  textfile.h
src/self_test/: data_gen.cpp
